--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: rgb(215, 16, 88);
-    color: linen;
-    font-size: 150%;
+    color: DarkGrey;
+    font-size: 169%;
     line-height: 1.4;
 }
 
