--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: rgb(215, 16, 88);
-    color: DarkGrey;
+    color: DarkGray;
     font-size: 169%;
     line-height: 1.4;
 }
